Made lastfm helper more robust. Fixed some layout issues.

--- a/media/css/responsive.less
+++ b/media/css/responsive.less
@@ -9,7 +9,7 @@
   div#rightCont {
     display: none;
   }
-  div#leftContOuter {
+  div#leftCont div#leftContOuter {
     width: 100%;
   }
 }
@@ -44,10 +44,10 @@
   .profile_text  {
     margin-right: 5px !important;
   }
-  div#leftContInner {
+  div#leftCont div#leftContInner {
     display: none;
   }
-  div#leftContOuter {
+  div#leftCont div#leftContOuter {
     margin-left: 0 !important;
   }
   div.container {
