--- a/media/css/styles.less
+++ b/media/css/styles.less
@@ -202,7 +202,7 @@ div#leftCont {
     font-weight: normal;
     letter-spacing: 0.01em;
     margin-left: 150px;
-    width: 450px;
+    width: 534px;
   }
 }
 div#rightCont {
@@ -490,7 +490,7 @@ form#addListeningForm {
 }
 form#addListeningForm {
   input[type="text"].working {
-    background: #fff url('/media/img/ajax-loader-circle.gif') no-repeat 99% 50%;
+    background: #ffb url('/media/img/ajax-loader-circle.gif') no-repeat 99% 50%;
   }
 }
 form#composeForm {
